manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kheng-sovannak1578-myghjklda-deployment
  labels:
    app: kheng-sovannak1578-myghjklda
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kheng-sovannak1578-myghjklda
  template:
    metadata:
      labels:
        app: kheng-sovannak1578-myghjklda
    spec:
      containers:
        - name: kheng-sovannak1578-myghjklda-container
          image: pipejet/kheng-sovannak1578-myghjklda:1
          ports:
            - containerPort: 5173
