manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kheng-sovannak1578-myghjklda-service
spec:
  type: NodePort
  selector:
    app: kheng-sovannak1578-myghjklda
  ports:
    - protocol: TCP
      port: 8332
      targetPort: 5173
